# localstack-extension-tailscale

./: .envrc  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  pyproject.toml  setup.cfg  shell.nix
.github/workflows/: publish.yml  tests.yml
localstack_extension_tailscale/: __init__.py  container.py  extension.py
localtailstackscale/: __init__.py  container.py  extension.py
tests/: test_container.py
