[metadata]
name = localstack-extension-tailscale
version = 0.1.0
summary = LocalStack Extension: localstack-extension-tailscale
url = https://github.com/simonrw/localstack-extension-tailscale
author = Simon Walker
author_email = simon.walker@localstack.cloud
description = Tailscale integration with LocalStack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=1.0

[options.entry_points]
localstack.extensions =
    localstack_extension_tailscale = localstack_extension_tailscale.extension:LocalStackTailscale
